fix: limit serving size input to four digits and improve field visibility

--- a/src/app/pages/generate-recipe-page/generate-recipe-page.scss
+++ b/src/app/pages/generate-recipe-page/generate-recipe-page.scss
@@ -236,8 +236,8 @@
 }
 
 .serving-size-input {
-  width: 61px;
-  padding: 3px 15px;
+  width: 78px;
+  padding: 3px 12px;
   text-align: center;
   outline: none;
 }
